Closed Bug 282367 Opened 21 years ago Closed 21 years ago

Export CERT_DestroyUserNotice

Categories

(NSS :: Libraries, defect, P2)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: martin, Assigned: wtc)

References

Details

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; de-DE; rv:1.7.5) Gecko/20050210 Firefox/1.0 (Debian package 1.0+dfsg.1-6) Build Identifier: NSS should export CERT_DestroyUserNotice, to allow releasing memory allocated through CERT_DecodeUserNotice. Reproducible: Always Steps to Reproduce:
Attached patch Patch to update nss.def (obsolete) — Splinter Review
Blocks: 259031
Attachment #174390 - Flags: review?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → 3.10
Attached patch Patch v1.1Splinter Review
Also added a CERT_DestroyUserNotice call to cmd/lib/pppolicy.c. Please review (even if you are not the designated reviewer).
Attachment #174390 - Attachment is obsolete: true
Attachment #175071 - Flags: superreview?(rrelyea)
Attachment #175071 - Flags: review?(julien.pierre.bugs)
Not sure what the proper format for a review is, but... The Patch v1.1 looks correct to me.
Comment on attachment 174390 [details] [diff] [review] Patch to update nss.def Removing review request for obsoleted patch
Attachment #174390 - Flags: review?
Comment on attachment 175071 [details] [diff] [review] Patch v1.1 r=nelson
Attachment #175071 - Flags: review?(julien.pierre.bugs) → review+
Patch checked in on the tip for NSS 3.10. Checking in lib/nss/nss.def; /cvsroot/mozilla/security/nss/lib/nss/nss.def,v <-- nss.def new revision: 1.139; previous revision: 1.138 done Checking in cmd/lib/pppolicy.c; /cvsroot/mozilla/security/nss/cmd/lib/pppolicy.c,v <-- pppolicy.c new revision: 1.3; previous revision: 1.2 done
Status: NEW → RESOLVED
Closed: 21 years ago
OS: Linux → All
Hardware: PC → All
Resolution: --- → FIXED
Setting priorities on unprioritized bugs resolved fixed for NSS 3.10.
Priority: -- → P2
Version: unspecified → 3.9
Attachment #175071 - Flags: superreview?(rrelyea) → superreview+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: