Bugzilla Bug 282367: Export CERT_DestroyUserNotice from the nss shared library.  Added a CERT_DestroyUserNotice call to cmd/lib/pppolicy.c to fix a leak of CERTUserNotice. r=nelsonb. Modified Files: lib/nss/nss.def cmd/lib/pppolicy.c